# Rust-A-Project-Based-Journey

./: README.md
Part 1 - The Beginner Path - Core Syntax & The Ownership Model/1_HelloWorld/: Cargo.toml
Part 1 - The Beginner Path - Core Syntax & The Ownership Model/2_VariablesAndPrimitives/: Cargo.toml
Part 1 - The Beginner Path - Core Syntax & The Ownership Model/2_VariablesAndPrimitives/src/: main.rs
Part 1 - The Beginner Path - Core Syntax & The Ownership Model/3_FunctionsAndControlFlow/: Cargo.toml
Part 1 - The Beginner Path - Core Syntax & The Ownership Model/4_Ownership/: Cargo.toml
Part 1 - The Beginner Path - Core Syntax & The Ownership Model/5_BorrowingAndSlices/: Cargo.toml
Part 1 - The Beginner Path - Core Syntax & The Ownership Model/5_BorrowingAndSlices/src/: main.rs
Part 1 - The Beginner Path - Core Syntax & The Ownership Model/6_Structs/: Cargo.toml
Part 1 - The Beginner Path - Core Syntax & The Ownership Model/6_Structs/src/: main.rs
Part 1: The Beginner Path - Core Syntax & The Ownership Model/1_HelloWorld/: Cargo.toml
Part 1: The Beginner Path - Core Syntax & The Ownership Model/1_HelloWorld/src/: main.rs
Part 1: The Beginner Path - Core Syntax & The Ownership Model/2_VariablesAndPrimitives/: Cargo.toml
Part 1: The Beginner Path - Core Syntax & The Ownership Model/3_FunctionsAndControlFlow/: Cargo.toml
Part 1: The Beginner Path - Core Syntax & The Ownership Model/3_FunctionsAndControlFlow/src/: main.rs
Part 1: The Beginner Path - Core Syntax & The Ownership Model/4_Ownership/: Cargo.toml
Part 1: The Beginner Path - Core Syntax & The Ownership Model/4_Ownership/src/: main.rs
Part 1: The Beginner Path - Core Syntax & The Ownership Model/5_BorrowingAndSlices/: Cargo.toml
Part 1: The Beginner Path - Core Syntax & The Ownership Model/6_Structs/: Cargo.toml
Part 2 - The Intermediate Path - Building Blocks of Idiomatic Rust/10_Traits/: Cargo.toml
Part 2 - The Intermediate Path - Building Blocks of Idiomatic Rust/11_Lifetimes/: Cargo.toml
Part 2 - The Intermediate Path - Building Blocks of Idiomatic Rust/12_ModulesAndCrates/: Cargo.toml
Part 2 - The Intermediate Path - Building Blocks of Idiomatic Rust/12_ModulesAndCrates/src/: lib.rs  main.rs  network.rs
Part 2 - The Intermediate Path - Building Blocks of Idiomatic Rust/12_ModulesAndCrates/src/network/: client.rs
Part 2 - The Intermediate Path - Building Blocks of Idiomatic Rust/7_EnumsAndPatternMatching/: Cargo.toml
Part 2 - The Intermediate Path - Building Blocks of Idiomatic Rust/8_Collections/: Cargo.toml
Part 2 - The Intermediate Path - Building Blocks of Idiomatic Rust/8_Collections/src/: main.rs
Part 2 - The Intermediate Path - Building Blocks of Idiomatic Rust/9_ErrorHandling/: Cargo.toml
Part 2: The Intermediate Path - Building Blocks of Idiomatic Rust/10_Traits/: Cargo.toml
Part 2: The Intermediate Path - Building Blocks of Idiomatic Rust/10_Traits/src/: main.rs
Part 2: The Intermediate Path - Building Blocks of Idiomatic Rust/11_Lifetimes/: Cargo.toml
Part 2: The Intermediate Path - Building Blocks of Idiomatic Rust/11_Lifetimes/src/: main.rs
Part 2: The Intermediate Path - Building Blocks of Idiomatic Rust/12_ModulesAndCrates/: Cargo.toml
Part 2: The Intermediate Path - Building Blocks of Idiomatic Rust/7_EnumsAndPatternMatching/: Cargo.toml
Part 2: The Intermediate Path - Building Blocks of Idiomatic Rust/7_EnumsAndPatternMatching/src/: main.rs
Part 2: The Intermediate Path - Building Blocks of Idiomatic Rust/8_Collections/: Cargo.toml
Part 2: The Intermediate Path - Building Blocks of Idiomatic Rust/9_ErrorHandling/: Cargo.toml
Part 2: The Intermediate Path - Building Blocks of Idiomatic Rust/9_ErrorHandling/src/: main.rs
Part 3 - The Advanced Path - The Modern Rust Ecosystem/13_Testing/: Cargo.toml
Part 3 - The Advanced Path - The Modern Rust Ecosystem/14_FileIO/: Cargo.toml
Part 3 - The Advanced Path - The Modern Rust Ecosystem/15_ClosuresAndIterators/: Cargo.toml
Part 3 - The Advanced Path - The Modern Rust Ecosystem/15_ClosuresAndIterators/src/: main.rs
Part 3 - The Advanced Path - The Modern Rust Ecosystem/16_SmartPointers/: Cargo.toml
Part 3 - The Advanced Path - The Modern Rust Ecosystem/17_WorkingWithJSON/: Cargo.toml
Part 3 - The Advanced Path - The Modern Rust Ecosystem/17_WorkingWithJSON/src/: main.rs
Part 3: The Advanced Path - The Modern Rust Ecosystem/13_Testing/: Cargo.toml
Part 3: The Advanced Path - The Modern Rust Ecosystem/14_FileIO/: Cargo.toml
Part 3: The Advanced Path - The Modern Rust Ecosystem/14_FileIO/src/: main.rs
Part 3: The Advanced Path - The Modern Rust Ecosystem/15_ClosuresAndIterators/: Cargo.toml
Part 3: The Advanced Path - The Modern Rust Ecosystem/16_SmartPointers/: Cargo.toml
Part 3: The Advanced Path - The Modern Rust Ecosystem/16_SmartPointers/src/: main.rs
Part 3: The Advanced Path - The Modern Rust Ecosystem/17_WorkingWithJSON/: Cargo.toml
Part 4 - The Expert Path - Concurrency, Async & The Web/18_BasicConcurrency/: Cargo.toml
Part 4 - The Expert Path - Concurrency, Async & The Web/19_SharedStateConcurrency/: Cargo.toml
Part 4 - The Expert Path - Concurrency, Async & The Web/20_AsyncProgramming/: Cargo.toml
Part 4 - The Expert Path - Concurrency, Async & The Web/21_DatabaseWithSqlx/: Cargo.toml  _setup_steps.md
Part 4 - The Expert Path - Concurrency, Async & The Web/22_SimpleWebAPI/: Cargo.toml
Part 4 - The Expert Path - Concurrency, Async & The Web/23_ExploringTheFuture/: 23_ExploringTheFuture.md
Part 4: The Expert Path - Concurrency, Async & The Web/18_BasicConcurrency/: Cargo.toml
Part 4: The Expert Path - Concurrency, Async & The Web/19_SharedStateConcurrency/: Cargo.toml
Part 4: The Expert Path - Concurrency, Async & The Web/20_AsyncProgramming/: Cargo.toml
Part 4: The Expert Path - Concurrency, Async & The Web/21_DatabaseWithSqlx/: Cargo.toml
Part 4: The Expert Path - Concurrency, Async & The Web/22_SimpleWebAPI/: Cargo.toml  _Must_complete_21_first!
Part 4: The Expert Path - Concurrency, Async & The Web/22_SimpleWebAPI/src/: main.rs
(+5 files in other folders)
