[package]
name = "helloworld"
version = "0.1.0"
edition = "2021"
authors = ["dunamismax <dunamismax@tutamail.com>"]
description = "Lesson 1: Your First Rust Program. The Journey Begins: Hello, World!"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# No external libraries are needed for this lesson.
