[package]
name = "3_functionsandcontrolflow"
version = "0.1.0"
edition = "2021"
authors = ["dunamismax <dunamismax@tutamail.com>"]
description = "Lesson 3: Using functions to organize code and control flow with loops and conditionals."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# No external libraries are needed for this lesson.
