[package]
name = "5_borrowingandslices"
version = "0.1.0"
edition = "2021"
authors = ["dunamismax <dunamismax@tutamail.com>"]
description = "Lesson 5: The solution to Ownership. Using references and slices to access data without taking ownership."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# No external libraries are needed for this lesson.
