[package]
name = "enumsandpatternmatching"
version = "0.1.0"
edition = "2021"
authors = ["dunamismax <dunamismax@tutamail.com>"]
description = "Lesson 7: Mastering enums for robust data modeling and pattern matching for exhaustive control flow."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# No external libraries are needed for this lesson.
