[package]
name = "errorhandling"
version = "0.1.0"
edition = "2021"
authors = ["dunamismax <dunamismax@tutamail.com>"]
description = "Lesson 9: Writing resilient code by handling recoverable errors with Result and the `?` operator."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# No external libraries are needed.
