[package]
name = "8_collections"
version = "0.1.0"
edition = "2021"
authors = ["dunamismax <dunamismax@tutamail.com>"]
description = "Lesson 8: Managing dynamic lists with Vec<T> and key-value pairs with HashMap<K, V>."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# No external libraries are needed for this lesson. We're using the standard library collections.
