[package]
name = "closuresanditerators"
version = "0.1.0"
edition = "2021"
authors = ["dunamismax <dunamismax@tutamail.com>"]
description = "Lesson 15: Embracing functional Rust with closures and iterators."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# No external dependencies needed.
