[package]
name = "14_fileio"
version = "0.1.0"
edition = "2021"
authors = ["dunamismax <dunamismax@tutamail.com>"]
description = "Lesson 14: Persisting data by reading from and writing to files."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# No external dependencies needed.
