[package]
name = "16_smartpointers"
version = "0.1.0"
edition = "2021"
authors = ["dunamismax <dunamismax@tutamail.com>"]
description = "Lesson 16: Understanding heap allocation and shared ownership patterns with smart pointers."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# No external dependencies needed.
