[package]
name = "17_workingwithjson"
version = "0.1.0"
edition = "2021"
authors = ["dunamismax <dunamismax@tutamail.com>"]
description = "Lesson 17: A project to parse real-world data from JSON into Rust structs and back."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Serde is the framework for serializing and deserializing Rust data structures.
# We enable the "derive" feature, which allows us to automatically generate the
# necessary code for our structs using `#[derive(Serialize, Deserialize)]`.
serde = { version = "1.0", features = ["derive"] }

# Serde_json is the implementation for the JSON data format.
serde_json = "1.0"
