[package]
name = "asyncprogramming"
version = "0.1.0"
edition = "2021"
authors = ["dunamismax <dunamismax@tutamail.com>"]
description = "Lesson 20: Unlocking performance with non-blocking, asynchronous code using tokio."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Tokio is an asynchronous runtime for Rust. It provides the tools we need
# to write non-blocking network services, including an I/O event loop,
# a scheduler, and timers.
# The "full" feature flag is a convenient way to enable everything.
tokio = { version = "1", features = ["full"] }
