[package]
name = "22_simplewebapi"
version = "0.1.0"
edition = "2021"
authors = ["dunamismax <dunamismax@tutamail.com>"]
description = "Final Capstone Project: A complete, database-backed REST API with Axum."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Axum is our web framework, built on top of Tokio.
axum = "0.8.4"

# Tokio is our async runtime.
tokio = { version = "1", features = ["full"] }

# sqlx for asynchronous database interaction.
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-native-tls",
    "sqlite",
    "macros",
] }

# Serde for serialization and deserialization.
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# anyhow for general-purpose error handling.
anyhow = "1.0"

# dotenvy to load our .env file.
dotenvy = "0.15"

# Tracing for structured logging.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
